tests/ui/suggestions/multibyte-escapes.stderr
error: non-ASCII character in byte literal
  --> $DIR/multibyte-escapes.rs:4:7
   |
LL |     b'µ';
   |       ^ must be ASCII
   |
help: if you meant to use the unicode code point for 'µ', use a \xHH escape
   |
LL |     b'\xB5';
   |       ~~~~

error: non-ASCII character in byte literal
  --> $DIR/multibyte-escapes.rs:9:7
   |
LL |     b'字';
   |       ^^
   |       |
   |       must be ASCII
   |       this multibyte character does not fit into a single byte

error: aborting due to 2 previous errors

